<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/image_size_fifty"
            android:layout_height="@dimen/image_size_fifty"
            android:layout_gravity="center"
            android:src="@drawable/fragment_listener_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/image_size_twenty_five"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="@dimen/text_size" />

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_twenty" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/size_five"
        android:background="@color/view_color" />

    <LinearLayout
        android:layout_marginTop="@dimen/image_size_twenty_five"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_one_hundred"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/fragment_listener_iv_localmusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView

                android:layout_width="@dimen/image_size_thirty"
                android:layout_height="@dimen/image_size_thirty"
                android:src="@drawable/localmusic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_eight"
                android:text="@string/localmusic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_listener_iv_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView

                android:layout_width="@dimen/image_size_thirty"
                android:layout_height="@dimen/image_size_thirty"
                android:src="@drawable/like" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_eight"
                android:text="@string/like" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_listener_iv_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView

                android:layout_width="@dimen/image_size_thirty"
                android:layout_height="@dimen/image_size_thirty"
                android:src="@drawable/download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_eight"
                android:text="@string/download" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_listener_iv_recently"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView

                android:layout_width="@dimen/image_size_thirty"
                android:layout_height="@dimen/image_size_thirty"
                android:src="@drawable/recently" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_eight"
                android:text="@string/recently" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"/>
    <LinearLayout
        android:id="@+id/fragment_listener_musiclist"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/music_list"
            />
        <TextView
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/remotemusic"
            android:layout_marginLeft="@dimen/size_twenty"
            android:textSize="@dimen/size_twenty"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragment_listener_radiolist"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/radio"
            />
        <TextView
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/radiomusic"
            android:layout_marginLeft="@dimen/size_twenty"
            android:textSize="@dimen/size_twenty"
            />

    </LinearLayout>
</LinearLayout>
